added jwt